--- a/page-example.html
+++ b/page-example.html
@@ -450,7 +450,7 @@
                         </p>
 		        <script>
 			  for(var i = 0; i < helpTexts.length; i++) {
-			       document.write('<span class="badge rounded-pill bg-secondary text-white">' 
+			       document.write('<span class="badge rounded-pill bg-secondary text-white mr-1">' 
 					     + helpTexts[i].badge + '</span>');
 			  }
 		        </script> 
