--- a/page-example.html
+++ b/page-example.html
@@ -509,6 +509,20 @@
                         </div>
                         <div class="row">
                             <ul class="col links">
+				    <li class="nav-item dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+					    aria-expanded="false">Все Туры</a>
+					<div class="dropdown-menu">
+					    <script src="allTours.js"></script>
+					    <a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
+					   <a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
+						<a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
+						<a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
+						<a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
+						<a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
+						<a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
+					</div>
+				    </li>
                                 <!-- Места для путешествий-->
                                 <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-Dzharylgach.html"
                                         class="scroll">Джарылгач - Украинские Мальдивы</a></li>
