--- a/page-example.html
+++ b/page-example.html
@@ -513,7 +513,7 @@
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 					    aria-expanded="false">Все Туры</a>
 					<div class="dropdown-menu">
-					    <script src="allTours.js"></script>
+					    <script src="./scripts/allTours.js "></script>
 					    <a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
 					   <a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
 						<a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
