--- a/page-example.html
+++ b/page-example.html
@@ -511,7 +511,7 @@
                             <ul class="col links">
 				    <li class="nav-item dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-					    aria-expanded="false">Все Туры</a>
+					    aria-expanded="false">Список Туров</a>
 					<div class="dropdown-menu">
 					    <script src="./scripts/allTours.js "></script>
 					    <a class="dropdown-item" href="https://novipovorot.pp.ua/page-Dzharylgach.html">Джарылгач - Украинские Мальдивы</a>
