--- a/page-LOL.html
+++ b/page-LOL.html
@@ -31,7 +31,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="libs/bootstrap.min.css">
-
+    
+    <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
+    <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+    
     <!-- owl-carousel -->
     <link href="./libs/owl-carousel/owl.carousel.min.css" rel="stylesheet" type='text/css' />
     <link href="./libs/owl-carousel/owl.theme.default.min.css" rel="stylesheet" type='text/css' />
