--- a/page-example.html
+++ b/page-example.html
@@ -513,7 +513,8 @@
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 					    aria-expanded="false">Список всех туров</a>
 					<div class="dropdown-menu">
-					    <script src="./scripts/allTours.js "></script>
+					    <script src="./scripts/allTours.js "></script>					
+					    <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a>
 					</div>
 				    </li>
                             </ul>
