--- a/page-example.html
+++ b/page-example.html
@@ -517,7 +517,7 @@
 					</div>
 				    </li>
 				    <li>
-					    <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a>
+					    <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a>
 				    </li>
                             </ul>
 			    
