--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                         </h5>
                         <p class="">Круче чем в Париже! Лучшие новогодние украшения страны!  </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  3 и 16 Января </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  16 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
