--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -4,62 +4,66 @@
 	<script>
 		
 	    //Заголовок
-	    let title = "Title тура ";			
+	    let title = "28 Лошадок и Симба ";			
 	    // Описание 
-	    let descriptionHead = "Туры выходного дня - Новый поворот, ОПИСАНИЕ  ";		
+	    let descriptionHead = "Туры выходного дня - Новый поворот, 28 лошадок и зоопарк Симба. Лучший выходной!  ";		
 	    //Ключевые слова
-	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Ключевые слова ";		
+	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Лошади Запорожье, экскурсии Запорожье, Зопарк Запорожье, Достопримечательности Запорожье ";		
 	    //Cсылкa Tура 
-	    let linkPage = "https://novipovorot.pp.ua/page-example.html";		
+	    let linkPage = "https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html";		
 	    //Картинка
-	    let imgInTour = "https://picsum.photos/825/473";		
+	    let imgInTour = "https://images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg";		
 	    //Дата тура
-	    let dateTour = "2022";		
+	    let dateTour = "23 января 2022";		
 	    //Подзаголовок
-	    let subtitle = "Подзаголовок";		
+	    let subtitle = "28 Лошадок и Симба";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
-		{program: 'Описание1'}, 
-	        {program: 'Описание2'}, 
-		{program: 'Описание3'}, 
-		{program: 'Описание4'}
+		{program: 'Шикарнейшие спортивные лошадки! Лучший конный комплекс Запорожской области с красивейшими спортивными лошадками чемпионами! А ты любишь кататься ?'}, 
+	        {program: 'Маленький и уютный зоопарк Симба с красавчиком волком, рыженькой лисичкой, попрошайками осликами! '}, 
+		{program: 'Ждем Вас, Ваших родных, близких и друзей на экскурсию! '}, 
+		{program: 'Собери компанию 10 человек, 11 едет бесплатно ) '}
 	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: 'Цена билета до ...: взрослые ... грн., дети от 3 до 12 лет ... грн., дети от 13 до 17 лет ... грн.'}, 
-	        {informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}, 
-		{informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}
+		{informPrice: 'Цена билета при брони до 15.01 : взрослые 350 грн., дети от 6 до 12 лет 315 грн.'}, 
+	        {informPrice: 'При брони с 16 до 22.01 если будут места на тур: взрослые 375 грн., дети от 6 до 12 лет 340 грн.; }
 	   ];	
 	   //Стоимость
-	   let price = "1000 Грн.";		
+	   let price = "350 Грн.";		
 	   //Продолжительность
 	   let duration	= "1 День";	
 	   //Описание тура
 	   let descTours = [
-		{time: '09:01', description: 'Описание1'}, 
-		{time: '09:02', description: 'Описание2'}, 
-		{time: '09:03', description: 'Описание3'}, 
-		{time: '18:00', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
+		{time: '11:00', description: 'выезд с центра Запорожья после минутки позитива.  Фестивальная - Советская - Автовокзал заберем Вас в этих местах и в путь!'}, 
+		{time: '11:30-12:30', description: 'Вы были в маленьком, но очень уютном зоопарке Симба? Милые ослики бегущие встречать гостей, яркие фазаны, красивейшие лиса с волком.  А самое главное тут почти никого нет из туристов, ведь это частный зоопарк и не все о нем знают'}, 
+		{time: '13:20-15:20', description: 'Мы среди настоящих чемпионов лошадок, достойных восхищения и вкусного бублика! Узнаем-же их достижения и истории от сотрудников конного комплекса Кентавр и конечно каждый желающий сможет покататься на лошадке доп.опл-50 грн) '}, 
+		{time: '16:20', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
 	   ];		
 	  //В стоимость входит
 	  let includedInThePrice = [
-		{includePrice: 'Описание1'}, 
-	        {includePrice: 'Описание2'}, 
-		{includePrice: 'Описание3'}, 
-		{includePrice: 'Описание4'}
+		{includePrice: 'проезд по всему маршруту на комфортабельном транспорте тур класса от 18 до 49 мест; количества людей в группе), '}, 
+	        {includePrice: 'входной билет и экскурсия в конно-спортивном комплексе Кентавр; '}, 
+		{includePrice: 'супер позитивное сопровождение представителя нашей компании, '}, 
+		{includePrice: 'входной билет и экскурсия в зоопарке Симба, '}, 
+		{includePrice: 'мини-магнит от Нового поворота, '}, 
+		{includePrice: 'самое замечательное настроение,доброе дело которые делаете вы помогая животным, ведь оплата за вход и экскурсию идет на их питание и содержание! 
+'}
 	   ];	
 	  //В стоимость не входит
 	  let priceDoesNotInclude = [
-		{doesNotIncludePrice: 'Описание1'}, 
-	        {doesNotIncludePrice: 'Описание2'}, 
-		{doesNotIncludePrice: 'Описание3'}, 
-		{doesNotIncludePrice: 'Описание4'}
+		{doesNotIncludePrice: 'проезд до места встречи группы в Запорожье и обратно; '}, 
+	        {doesNotIncludePrice: 'питание в уютном кафе КС Кентавр или перекус с собой;'}, 
+		{doesNotIncludePrice: 'катание на лошадки 50грн/чел'}
 	   ];	
 	  //Тексты подсказок
 	  let helpTexts = [
 		{badge: 'Запорожье'}, 
 	        {badge: 'Новый Поворот Запорожье'}, 
 		{badge: 'Путешествия'}, 
+		{badge: 'Экскурсии Запорожье'},
+		{badge: 'Новости Запорожье'},
+		{badge: 'Достопримечательности Запорожье'},
 		{badge: 'Туризм'}
 	   ];
 		
