--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -48,8 +48,7 @@
 		{includePrice: 'супер позитивное сопровождение представителя нашей компании, '}, 
 		{includePrice: 'входной билет и экскурсия в зоопарке Симба, '}, 
 		{includePrice: 'мини-магнит от Нового поворота, '}, 
-		{includePrice: 'самое замечательное настроение,доброе дело которые делаете вы помогая животным, ведь оплата за вход и экскурсию идет на их питание и содержание! 
-'}
+		{includePrice: 'самое замечательное настроение,доброе дело которые делаете вы помогая животным, ведь оплата за вход и экскурсию идет на их питание и содержание!'}
 	   ];	
 	  //В стоимость не входит
 	  let priceDoesNotInclude = [
