--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -12,7 +12,7 @@
 	    //Cсылкa Tура 
 	    let linkPage = "https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html";		
 	    //Картинка
-	    let imgInTour = "https://images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg";		
+	    let imgInTour = "./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg";		
 	    //Дата тура
 	    let dateTour = "23 января 2022";		
 	    //Подзаголовок
