--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -43,18 +43,18 @@
 	   ];		
 	  //В стоимость входит
 	  let includedInThePrice = [
-		{includePrice: 'проезд по всему маршруту на комфортабельном транспорте тур класса от 18 до 49 мест; количества людей в группе), '}, 
-	        {includePrice: 'входной билет и экскурсия в конно-спортивном комплексе Кентавр; '}, 
-		{includePrice: 'супер позитивное сопровождение представителя нашей компании, '}, 
-		{includePrice: 'входной билет и экскурсия в зоопарке Симба, '}, 
-		{includePrice: 'мини-магнит от Нового поворота, '}, 
-		{includePrice: 'самое замечательное настроение,доброе дело которые делаете вы помогая животным, ведь оплата за вход и экскурсию идет на их питание и содержание!'}
+		{includePrice: 'проезд по всему маршруту на комфортабельном транспорте тур класса от 18 до 49 мест (от количества людей в группе).'}, 
+	        {includePrice: 'входной билет и экскурсия в конно-спортивном комплексе Кентавр.'}, 
+		{includePrice: 'супер позитивное сопровождение представителя нашей компании.'}, 
+		{includePrice: 'входной билет и экскурсия в зоопарке Симба.'}, 
+		{includePrice: 'мини-магнит от Нового поворота.'}, 
+		{includePrice: 'самое замечательное настроение,доброе дело которые делаете вы помогая животным, ведь оплата за вход и экскурсию идет на их питание и содержание.'}
 	   ];	
 	  //В стоимость не входит
 	  let priceDoesNotInclude = [
-		{doesNotIncludePrice: 'проезд до места встречи группы в Запорожье и обратно; '}, 
-	        {doesNotIncludePrice: 'питание в уютном кафе КС Кентавр или перекус с собой;'}, 
-		{doesNotIncludePrice: 'катание на лошадки 50грн/чел'}
+		{doesNotIncludePrice: 'проезд до места встречи группы в Запорожье и обратно.'}, 
+	        {doesNotIncludePrice: 'питание в уютном кафе КС Кентавр или перекус с собой.'}, 
+		{doesNotIncludePrice: 'катание на лошадке 50 грн/чел.'}
 	   ];	
 	  //Тексты подсказок
 	  let helpTexts = [
