--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -36,7 +36,7 @@
 	   let duration	= "1 День";	
 	   //Описание тура
 	   let descTours = [
-		{time: '11:00', description: 'выезд с центра Запорожья после минутки позитива.  Фестивальная - Советская - Автовокзал заберем Вас в этих местах и в путь!'}, 
+		{time: '11:00', description: 'Выезд с центра Запорожья после минутки позитива.  Фестивальная - Советская - Автовокзал заберем Вас в этих местах и в путь!'}, 
 		{time: '11:30-12:30', description: 'Вы были в маленьком, но очень уютном зоопарке Симба? Милые ослики бегущие встречать гостей, яркие фазаны, красивейшие лиса с волком.  А самое главное тут почти никого нет из туристов, ведь это частный зоопарк и не все о нем знают'}, 
 		{time: '13:20-15:20', description: 'Мы среди настоящих чемпионов лошадок, достойных восхищения и вкусного бублика! Узнаем-же их достижения и истории от сотрудников конного комплекса Кентавр и конечно каждый желающий сможет покататься на лошадке доп.опл-50 грн) '}, 
 		{time: '16:20', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
