--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -149,7 +149,11 @@
 				      
 				      <tr>
 					  <th scope="row"></th>
-					  <td> 28 Лошадок и Симба </td>
+					  <td>
+                                              <a target="_blank" href="https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html"> 
+                                                 28 Лошадок и Симба
+                                              </a>
+                                          </td>
 					  <td> 23 Января</td>
 				       </tr>
 				          
