--- a/page-example.html
+++ b/page-example.html
@@ -28,7 +28,7 @@
           let inform = [
 		{informPrice: 'Цена билета до ...: взрослые ... грн., дети от 3 до 12 лет ... грн., дети от 13 до 17 лет ... грн.'}, 
 	        {informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}, 
-		{informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}
+		{informPriceNote:  '*Примечание: До 5 лет без места в транспорте бесплатно.'}
 	   ];	
 	   //Стоимость
 	   let price = "1000 Грн.";		
@@ -237,7 +237,7 @@
 				<script>
 					for(var i = 0; i < inform.length; i++) {
 					     document.write(
-						     inform[i].informPrice + '<hr>');
+						     inform[i].informPrice + '<hr>' + '<i>' + inform[i].informPriceNote + '</i>');
 					}
 		                </script>
                                 <i>*Примечание </i> до 3х бесплатно (без предоставления отдельного места в транспорте)
