--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -241,7 +241,7 @@
 				<script>
 					for(var i = 0; i < inform.length; i++) {
 					     document.write(
-						     inform[i].informPrice + '<hr>' + '<i>' + inform[i].informPriceNote + '</i>');
+						     inform[i].informPrice + '<hr>'  + inform[i].informPriceNote );
 					}
 		                </script>                                
                             </span>
