--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -27,8 +27,8 @@
 	  //Информируем
           let inform = [
 		{informPrice: 'Цена билета при брони до 15.01 : взрослые 350 грн., дети от 6 до 12 лет 315 грн.'}, 
-	        {informPrice: 'При брони с 16 до 22.01 если будут места на тур: взрослые 375 грн., дети от 6 до 12 лет 340 грн.;',
-		informPriceNote: '*Примечание: До 5 лет без места в транспорте бесплатно, при сопровождении 2х взрослых. ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые для путешествия по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21' }
+	        {informPrice: 'При брони с 16 до 22.01 если будут места на тур: взрослые 375 грн., дети от 6 до 12 лет 340 грн.;'},
+	        {informPriceNote: '*Примечание: До 5 лет без места в транспорте бесплатно, при сопровождении 2х взрослых. ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые для путешествия по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21' }
 	   ];	
 	   //Стоимость
 	   let price = "350 Грн.";		
@@ -241,8 +241,9 @@
 				<script>
 					for(var i = 0; i < inform.length; i++) {
 					     document.write(
-						     inform[i].informPrice + '<hr>'  + inform[i].informPriceNote );
+						     inform[i].informPrice + '<hr>' );
 					}
+					document.write( '<i>'  + inform[i].informPriceNote + '<i>' );
 		                </script>                                
                             </span>
                         </div>
