--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -243,7 +243,7 @@
 					     document.write(
 						     inform[i].informPrice + '<hr>' );
 					}
-					document.write( '<i>'  + inform[i].informPriceNote + '<i>' );
+					document.write( '<i>'  + inform.informPriceNote + '<i>' );
 		                </script>                                
                             </span>
                         </div>
