--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -110,6 +110,16 @@
         .badge-l {
             width: 150px; background-color: #f8f9fa; border-radius: .25rem; text-align: center; padding: .25em .4em;
         }
+	.hr {
+	    margin-top: 1rem;
+	    margin-bottom: 1rem;
+	    border: 0;
+	    border-bottom: 1px solid rgba(0,0,0,.1);
+	}
+
+	.hr:last-child {
+	    border-bottom: none;
+	}  
     </style>
 
 </head>
@@ -240,8 +250,7 @@
                             <span class="txt-alg-jf">
 				<script>
 					for(var i = 0; i < inform.length; i++) {
-					     document.write(
-						     inform[i].informPrice + '<hr>' );
+					     document.write('<span class="hr">' + inform[i].informPrice + '</span>');
 					}
 		                </script>                                
                             </span>
