--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -111,6 +111,7 @@
             width: 150px; background-color: #f8f9fa; border-radius: .25rem; text-align: center; padding: .25em .4em;
         }
 	.hr {
+	    display: block;
 	    margin-top: 1rem;
 	    margin-bottom: 1rem;
 	    border: 0;
