--- a/page-example.html
+++ b/page-example.html
@@ -106,8 +106,19 @@
         .badge-l {
             width: 150px; background-color: #f8f9fa; border-radius: .25rem; text-align: center; padding: .25em .4em;
         }
-    </style>
+	.hr {
+	    display: block;
+	    margin-top: 1rem;
+	    margin-bottom: 1rem;
+	    border: 0;
+	    border-bottom: 1px solid rgba(0,0,0,.1);
+	}
 
+	.hr:last-child {
+	    border-bottom: none;
+	}  
+    </style>
+	
 </head>
 
 <body>
