--- a/page-example.html
+++ b/page-example.html
@@ -247,11 +247,9 @@
                             <span class="txt-alg-jf">
 				<script>
 					for(var i = 0; i < inform.length; i++) {
-					     document.write(
-						     inform[i].informPrice + '<hr>' + '<i>' + inform[i].informPriceNote + '</i>');
+					     document.write('<span class="hr">' + inform[i].informPrice + '</span>');
 					}
-		                </script>
-                                <i>*Примечание </i> до 3х бесплатно (без предоставления отдельного места в транспорте)
+		                </script>    
                             </span>
                         </div>
                         <!-- //Информируем -->
