--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -82,7 +82,7 @@
 		    + '<meta property="og:description" content="' + descriptionHead + '" />'
    		    + '<meta property="og:type" content="website" />'
    		    + '<meta property="og:url" content="' + linkPage + '" />'
-    		    + '<meta property="og:image" content="' + imgInTour + '">'
+    		    + '<meta property="og:image" content="./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg">'
 	    );
 
 	</script> 
