--- a/page-dnipro-new-year.html
+++ b/page-dnipro-new-year.html
@@ -140,7 +140,7 @@
                                     <!-- Дата -->
                                     <span class="fa fa-calendar mr-2"></span>Дата:&nbsp;
 					<span class="dateOfTravel">
-					   19 и 27 декабря
+					   16 Января 2022
 				    	</span>
                                     <!-- //Дата-->
                                 </li>
