--- a/page-example.html
+++ b/page-example.html
@@ -64,7 +64,14 @@
 	   ];
 		
 	</script> 
-	
+
+	<!-- Open Graph -->
+        <meta property="og:title" content="28 Лошадок и Симба">
+        <meta property="og:description" content="Туры выходного дня - Новый поворот, 28 лошадок и зоопарк Симба. Лучший выходной!" />
+        <meta property="og:type" content="website" />
+	<meta property="og:image" content="./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg">
+        <meta property="og:url" content="https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
 	
@@ -72,16 +79,10 @@
 	    document.write(
 		    '<title>' + title + '| Новый поворот</title>'
 		    + '<meta name="description" content="' + descriptionHead + '">'
-  		    + '<meta name="keywords" content="' + keywords + '" />'
-		    //Open Graph
-		    + '<meta property="og:title" content="' + title + '">'
-		    + '<meta property="og:description" content="' + descriptionHead + '" />'
-   		    + '<meta property="og:type" content="website" />'
-   		    + '<meta property="og:url" content="' + linkPage + '" />'
-    		    + '<meta property="og:image" content="' + imgInTour + '">'
+  		    + '<meta name="keywords" content="' + keywords + '" />'		    		      		       		    
 	    );
-
-	</script> 
+	</script>
+	
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
 
     <!--favicon.ico-->
