--- a/page-Kamyanets-podolsky.html
+++ b/page-Kamyanets-podolsky.html
@@ -4,73 +4,92 @@
 	<script>
 		
 	    //Заголовок
-	    let title = "Title тура ";			
+	    let title = "Каменец Подольский и Умань ";			
 	    // Описание 
-	    let descriptionHead = "Туры выходного дня - Новый поворот, ОПИСАНИЕ  ";		
+	    let descriptionHead = "Туры выходного дня - Новый поворот, КАМЕНЕЦ-ПОДОЛЬСКИЙ ПОЛЕТ ВОЗДУШНЫХ ШАРОВ. НОВАЯ СОФИЕВКА УМАНЬ. ЦЕЛЕБНАЯ БАКОТА. МЕДЖИБОШСКИЙ ЗАМОК БЕЛЫЙ ЛЕБЕДЬ.  ";		
 	    //Ключевые слова
-	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Ключевые слова ";		
+	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Каменец Подольский, Умань, Софиевка Умань, Бакота ";		
 	    //Cсылкa Tура 
-	    let linkPage = "https://novipovorot.pp.ua/page-example.html";		
+	    let linkPage = "https://novipovorot.pp.ua/page-Kamyanets-podolsky.html";		
 	    //Картинка
-	    let imgInTour = "https://picsum.photos/825/473";		
+	    let imgInTour = "https://picsum.photos/-Kamyanets-podolsky";		
 	    //Дата тура
-	    let dateTour = "2022";		
+	    let dateTour = "5-6 марта 2022";		
 	    //Подзаголовок
-	    let subtitle = "Подзаголовок";		
+	    let subtitle = "Каменец Подольский и Умань";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
-		{program: 'Описание1'}, 
-	        {program: 'Описание2'}, 
-		{program: 'Описание3'}, 
-		{program: 'Описание4'}
+		{program: 'ЧУДЕСНЫЕ ВОЗДУШНЫЕ ШАРЫ НАД СТАРИННЫМ ЗАМКОМ! Мы побываем в прекрасном Каменец-Подольском, этот город завораживает своими обрывистыми каньонами, старинными улочками и восхитительным замком! Огромные воздушные шары над замком, это чудеса наяву!'}, 
+	        {program: 'Первозданная природа Бакоты, удивительные пещеры в которых жили монахи и ЦЕЛЕБНЕЙШИЙ ГОРНЫЙ РОДНИК! Мы не только побываем в этих прекрасных местах, но и услышим их поразительные истории и сокровенные тайны ведь местный колоритный экскурсовод нам расскажет все и даже немного больше'}, 
+		{program: 'ДРЕВНЕЙШАЯ ОБОРОННАЯ КРЕПОСТЬ МЕДЖИБОШ -ЗАМОК БЕЛЫЙ ЛЕБЕДЬ. Его вид завораживает взгляд, он настолько прекрасен, что хочется пойти искать там древних рыцарей и принцесс. '},
+		{program: 'ЧТО НИ ШАГ, ТО УДИВЛЕНИЕ! Творение современного искусства ПАРК НОВАЯ СОФИЕВКА, он собрал в себе фантазии и сказки. Огнедышащие драконы, крылатые лошади, гигантские грибы, яркие пейзажи Японии, потрясающие фонтаны радуги и не только.'},
+		{program: 'ПОЛУЧИТЬ МАКСИМУМ ОТ ВЫХОДНЫХ! ТАК ЧТОБ КАЖДАЯ МИНУТА БЫЛА ВОСХИТИТЕЛЬНОЙ!'},
+		{program: 'ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 16 человек, 17 едет бесплатно )'}
 	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: 'Цена билета до ...: взрослые ... грн., дети от 3 до 12 лет ... грн., дети от 13 до 17 лет ... грн.'}, 
-	        {informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}, 
-		{informPriceNote:  '*Примечание: До 5 лет без места в транспорте бесплатно.'}
+		{informPrice: 'Цена билета при брони до 20 января: взрослые 2995 грн., дети от 7 до 12 лет 2800 грн.'}, 
+	        {informPrice: 'С 21 января до 16 феварля 3050 грн взрослые, 2850 грн 7-12лет'},
+		{informPrice: 'С 17 феварля до 4 марта если будут места на тур 3100 грн взрослые, 2900 грн 7-12 лет'},
+		{informPrice: 'При брони от 5 мест цена 2900 грн/чел. Предоплата по брони 50% от стоимости или 500 грн/чел для фиксации места! '},
+		{informPriceNote:  '*До 6 лет без места в транспорте бесплатно, при сопровождении 2х взрослых. ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые для путешествия по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21'}
 	   ];	
 	   //Стоимость
-	   let price = "1000 Грн.";		
+	   let price = "2995 Грн.";		
 	   //Продолжительность
-	   let duration	= "1 День";	
+	   let duration	= "2 Дня";	
 	   //Описание тура
 	   let descTours = [
-		{time: '09:01', description: 'Описание1'}, 
-		{time: '09:02', description: 'Описание2'}, 
+		{time: '22:00 4 марта', description: 'ыезд из Центра Запорожья после минутки позитива.Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV Заберем Вас  по проспекту от Автовокзала до Каховская(уточняйте при бронировании)'},
+		   {time: '5 марта 12:00-14:00 ', description: 'заселение в гостиницу , отдых и обед (доп.расход.)'},
+		   {time: '14:00-18:30', description: 'путешествие в Бакоту. Место с потрясающей природой, подышав там 1,5-2 часа вы забудете об усталости, ведь в компании самого колоритного Каменец-Подольского экскурсовода мы прогуляемся по старинным тропинкам средневековых монахов, и заглянем в их жилища-пещеры. Обязательно возьмем с собой бутылку для целебной родниковой воды, ведь по поверьям она лечит 1000 болезней! Берем с собой перекус, тк ужин будет очень поздний )'}, 
+		   {time: '18:30-20:00', description: 'ВАУ экскурсия! В компании местного самого улыбчивого экскурсовода мы увидим: Старинный город, каньон речки Смотрич стены которого более 30м, силуэты средневекового замка, рыночную площадь с одной из древнейших ратуш Украины, уникальнейшую архитектурную композицию мусульманский минарет у христианского храма, об этом можно еще писать и писать, стоит это все увидеть и услышать!'}, 
+		   {time: '20:00', description: 'все кто устал отправляются на отдых в гостиницу, а кто еще хочет гулять и делать потрясающие фото для Instagram и супер видео для Tik Tok продолжает прогулку. Не забывайте о нас когда выставляете сторизы и фото:) Отмечайте наши странички, Вам +1000000000 в карму'}, 
+		   {time: '6 марта  6-7:00', description: 'утренний полет на возушном шаре. по-желанию доп.расход 3500 грн/чел+транфсфер до места взлета и обратно, предварительная запись обязательна. '},
+		   {time: '7:30', description: 'кто рано встал, тот все успел! А у нас еще впереди Меджибош и Умань! Потому самостоятельно завтракаем и быстренько выезжаем дальше.Кто опоздает, назначается фотографом и делает всем по фотке в супер-ракурсе или поет зажигательную песню чтоб всем взбодриться:)'}, 
+		   {time: '10:00-11:00', description: 'поразительная крепость, на его фоне чувствуешь себя песчинкой в океане времени. Замок Белый Лебедь. Почему ? А мы это узнаем от местного экскурсовода!(доп.расход по-желанию ) Посещение замка по-желанию. Можно сделать фото на его фоне и полежать на травке отдохнуть от всех '}, 
+		   {time: '13:00-13:30', description: 'супер вкусное кафе в Умани . Сами активно выбираем что хотим и набираемся сил перед прогулкой в парке.(доп.расход)'}, 
+		{time: '13:40-15:40', description: 'Новая Софиевка ЧЮДО СКАЗКА Умани. Самое потрясающее место чтоб посмотреть и сделать удивительные фото. Огнедышащие драконы, крылатые лошади,гигантские грибы, яркие пейзажи Японии, потрясающие фонтаны радуги и не только. По-желанию берем местного экскурсовода и слушаем потрясающую историю создания Нового парка(доп.расход) или гуляем без ведь парк сам по-себе прекрасен и вся информация о нем на стендах возле объектов. Или возможно посещение Старой Софиевки на выбор туриста. Чтоб не заслужить общий гнев группы, вовремя собираемся и отправляемся в путь.'}, 
 		{time: '09:03', description: 'Описание3'}, 
-		{time: '18:00', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
+		{time: '00:00-1:30', description: 'ориентировочное время прибытия. Почему так, зависит от длительности стоянок, иногда сложно всем собраться после хорошего отдыха и дороги. Мы не знаем насколько будет загружена трасса в день возврата.Прибываем в Запорожье высаживаем от Каховской и дальше по проспекту до Автовокзала. Возвращаемся полностью отдохнувшими в потрясающем настроении, с морем впечатлений и крутыми фото!Всех обнимаем и ждем запись на тур!Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
 	   ];		
 	  //В стоимость входит
 	  let includedInThePrice = [
-		{includePrice: 'Описание1'}, 
-	        {includePrice: 'Описание2'}, 
-		{includePrice: 'Описание3'}, 
-		{includePrice: 'Описание4'}
+		{includePrice: 'проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;(от количества людей в группе, места в транспорте по датам оплат)транспорт тур.класса с раскладными сиденьями, ТВ;'}, 
+		  {includePrice: 'самая увлекательная экскурсия по Бакоте 1,5-2 часа;'},
+		  {includePrice: 'рекреационный збор в Бакоте;'},
+		  {includePrice: 'интереснейшая экскурсия по Каменец-Подольскому центру;'},
+		  {includePrice: '1 ночь в гостинице г.Каменец-Подольский 2 и 3х местные номера, удобства в номере;'},
+		  {includePrice: 'входной билет в Парк Новая Софиевка или Старая Софиевка на выбор;'},
+	        {includePrice: 'супер-позитивное сопровождение представителя нашей компании,'}, 
+		{includePrice: 'магнит от Нового поворота,'}, 
+		{includePrice: 'самое прекрасное настроение и вера в чудеса.'}
 	   ];	
 	  //В стоимость не входит
 	  let priceDoesNotInclude = [
-		{doesNotIncludePrice: 'Описание1'}, 
-	        {doesNotIncludePrice: 'Описание2'}, 
-		{doesNotIncludePrice: 'Описание3'}, 
-		{doesNotIncludePrice: 'Описание4'}
+		{doesNotIncludePrice: 'Входные билеты Меджибожский замок до 100 грн с экскурсией(по-желанию);1'}, 
+	        {doesNotIncludePrice: 'Питание покажем где покушать, но оплатить прийдеться Вам;'}, 
+		{doesNotIncludePrice: 'Экскурсия по Новой Софиевке Умань (по-желанию);'}
 	   ];	
 	  //Тексты подсказок
 	  let helpTexts = [
 		{badge: 'Запорожье'}, 
 	        {badge: 'Новый Поворот Запорожье'}, 
-		{badge: 'Путешествия'}, 
+		{badge: 'Каменец Подольский'}, 
+		  {badge: 'Умань Софиевка'}, 
+		  {badge: '8 марта Запорожье'}, 
+		  {badge: 'Путешествия'}, 
 		{badge: 'Туризм'}
 	   ];
 		
 	</script> 
 
 	<!-- Open Graph -->
-        <meta property="og:title" content="28 Лошадок и Симба">
-        <meta property="og:description" content="Туры выходного дня - Новый поворот, 28 лошадок и зоопарк Симба. Лучший выходной!" />
+        <meta property="og:title" content=" Каменец Подольский и Умань">
+        <meta property="og:description" content="Туры выходного дня - Новый поворот, КАМЕНЕЦ-ПОДОЛЬСКИЙ ПОЛЕТ ВОЗДУШНЫХ ШАРОВ. НОВАЯ СОФИЕВКА УМАНЬ. ЦЕЛЕБНАЯ БАКОТА. МЕДЖИБОШСКИЙ ЗАМОК БЕЛЫЙ ЛЕБЕДЬ." />
         <meta property="og:type" content="website" />
-	<meta property="og:image" content="./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg">
-        <meta property="og:url" content="https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html" />
+	<meta property="og:image" content="./images/Kamyanets-podolsky/inside-Kamyanets-podolsky.jpg">
+        <meta property="og:url" content="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
