--- a/page-Kamyanets-podolsky.html
+++ b/page-Kamyanets-podolsky.html
@@ -12,7 +12,7 @@
 	    //Cсылкa Tура 
 	    let linkPage = "https://novipovorot.pp.ua/page-Kamyanets-podolsky.html";		
 	    //Картинка
-	    let imgInTour = "https://picsum.photos/-Kamyanets-podolsky";		
+	    let imgInTour = ".images/Kamyanets-podolsky/inside-Kamyanets-podolsky.jpg";		
 	    //Дата тура
 	    let dateTour = "5-6 марта 2022";		
 	    //Подзаголовок
