--- a/page-Kamyanets-podolsky.html
+++ b/page-Kamyanets-podolsky.html
@@ -16,7 +16,7 @@
 	    //Дата тура
 	    let dateTour = "5-6 марта 2022";		
 	    //Подзаголовок
-	    let subtitle = "Каменец Подольский и Умань";		
+	    let subtitle = "КАМЕНЕЦ-ПОДОЛЬСКИЙ ПОЛЕТ ВОЗДУШНЫХ ШАРОВ. НОВАЯ СОФИЕВКА УМАНЬ. ЦЕЛЕБНАЯ БАКОТА. МЕДЖИБОШСКИЙ ЗАМОК БЕЛЫЙ ЛЕБЕДЬ.";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
 		{program: 'ЧУДЕСНЫЕ ВОЗДУШНЫЕ ШАРЫ НАД СТАРИННЫМ ЗАМКОМ! Мы побываем в прекрасном Каменец-Подольском, этот город завораживает своими обрывистыми каньонами, старинными улочками и восхитительным замком! Огромные воздушные шары над замком, это чудеса наяву!'}, 
