--- a/page-Kamyanets-podolsky.html
+++ b/page-Kamyanets-podolsky.html
@@ -40,7 +40,7 @@
 	   let duration	= "2 Дня";	
 	   //Описание тура
 	   let descTours = [
-		{time: '22:00 4 марта', description: 'ыезд из Центра Запорожья после минутки позитива.Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV Заберем Вас  по проспекту от Автовокзала до Каховская(уточняйте при бронировании)'},
+		{time: '4 марта 22:00 ', description: 'ыезд из Центра Запорожья после минутки позитива.Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV Заберем Вас  по проспекту от Автовокзала до Каховская(уточняйте при бронировании)'},
 		   {time: '5 марта 12:00-14:00 ', description: 'заселение в гостиницу , отдых и обед (доп.расход.)'},
 		   {time: '14:00-18:30', description: 'путешествие в Бакоту. Место с потрясающей природой, подышав там 1,5-2 часа вы забудете об усталости, ведь в компании самого колоритного Каменец-Подольского экскурсовода мы прогуляемся по старинным тропинкам средневековых монахов, и заглянем в их жилища-пещеры. Обязательно возьмем с собой бутылку для целебной родниковой воды, ведь по поверьям она лечит 1000 болезней! Берем с собой перекус, тк ужин будет очень поздний )'}, 
 		   {time: '18:30-20:00', description: 'ВАУ экскурсия! В компании местного самого улыбчивого экскурсовода мы увидим: Старинный город, каньон речки Смотрич стены которого более 30м, силуэты средневекового замка, рыночную площадь с одной из древнейших ратуш Украины, уникальнейшую архитектурную композицию мусульманский минарет у христианского храма, об этом можно еще писать и писать, стоит это все увидеть и услышать!'}, 
