--- a/page-Kamyanets-podolsky.html
+++ b/page-Kamyanets-podolsky.html
@@ -32,8 +32,7 @@
 	        {informPrice: 'С 21 января до 16 феварля 3050 грн взрослые, 2850 грн 7-12лет'},
 		{informPrice: 'С 17 феварля до 4 марта если будут места на тур 3100 грн взрослые, 2900 грн 7-12 лет'},
 		{informPrice: 'При брони от 5 мест цена 2900 грн/чел. Предоплата по брони 50% от стоимости или 500 грн/чел для фиксации места! '},
-		{informPriceNote:  '*До 6 лет без места в транспорте бесплатно, при сопровождении 2х взрослых. ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые для путешествия по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21'}
-	   ];	
+		{informPriceNote:  '*До 6 лет без места в транспорте бесплатно, при сопровождении 2х взрослых. ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые для путешествия по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21'}];	
 	   //Стоимость
 	   let price = "2995 Грн.";		
 	   //Продолжительность
