--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -166,7 +166,7 @@
 				      
 				      <tr>
 					  <th scope="row"></th>
-					  <td> Каменец-Подольский. Бакота. Умань. Меджибош </td>
+					  <td><a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">Каменец-Подольский. Бакота. Умань. Меджибош</a> </td>
 					  <td> 5-6 Марта </td>
 				       </tr>
 				      
