--- a/packages.html
+++ b/packages.html
@@ -301,32 +301,31 @@
                 </div>
                 <!--  //Карпаты 2022  -->
                 
-                   <!-- Рождество Харьков и Полтава  -->
+                   <!-- Каменец Подольский и Умань  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Poltava-Christmas.html">
-                            <img src="images/Christmas-Kharkiv-Poltava/home-KHARKIV-POLTAVA-CHRISTMAS.jpg" alt="baloon-fast"
+                        <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
+                            <img src="images/Kamyanets-podolsky/home-Kamyanets-podolsky.jpg" alt="Kamyanets"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>1900грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span> 2995грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Харьков. Полтава </h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Каменец Подольский, Умань, Меджибош  </h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Kharkiv-Poltava-Christmas.html">
-                               Рождество Харьков и Полтава
+                               Каменец Подольский и Умань
                             </a>
                         </h5>
                         <p class="">
-                           Рождество по-королевски. Белоснежный сахарный дворец Кенинга, Фентези парк Харкова и живая глина Опошни ...
+                           Мы побываем в прекрасном Каменец-Подольском, этот город завораживает своими обрывистыми каньонами, старинными улочками и восхитительным замком! ...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 7-8 Января </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 5-6 Марта </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Рождество Харьков и Полтава  -->
+                <!--  //Каменец Подольский и Умань  -->
                 
                  <!--  Мурляндия   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
