--- a/packages.html
+++ b/packages.html
@@ -304,7 +304,7 @@
                    <!-- Каменец Подольский и Умань  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
+                        <a href="https://novipovorot.pp.ua/c">
                             <img src="images/Kamyanets-podolsky/home-Kamyanets-podolsky.jpg" alt="Kamyanets"
                                 class="img-fluid" />
                         </a>
@@ -313,11 +313,12 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Каменец Подольский, Умань, Меджибош  </h6>
                         <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/home-Kamyanets-podolsky.jpg">
                                Каменец Подольский и Умань
                             </a>
                         </h5>
                         <p class="">
-                           Мы побываем в прекрасном Каменец-Подольском, этот город завораживает своими обрывистыми каньонами, старинными улочками и восхитительным замком! ...
+                           Мы побываем в прекрасном Каменец-Подольском, этот город завораживает своими обрывистыми каньонами, старинными улочками и восхитительным замком!
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 5-6 Марта </span></li>
