--- a/packages.html
+++ b/packages.html
@@ -318,7 +318,7 @@
                             </a>
                         </h5>
                         <p class="">
-                           Мы побываем в прекрасном Каменец-Подольском, этот город завораживает своими обрывистыми каньонами, старинными улочками и восхитительным замком!
+                           Этот город завораживает своими обрывистыми каньонами, старинными улочками и восхитительным замком!
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 5-6 Марта </span></li>
