--- a/packages.html
+++ b/packages.html
@@ -302,7 +302,7 @@
                    <!-- Каменец Подольский и Умань  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/c">
+                        <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
                             <img src="images/Kamyanets-podolsky/home-Kamyanets-podolsky.jpg" alt="Kamyanets"
                                 class="img-fluid" />
                         </a>
@@ -311,7 +311,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Каменец Подольский, Умань, Меджибош  </h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/home-Kamyanets-podolsky.jpg">
+                            <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
                                Каменец Подольский и Умань
                             </a>
                         </h5>
