--- a/page-Zoo-Kharkiv.html
+++ b/page-Zoo-Kharkiv.html
@@ -4,19 +4,19 @@
 	<script>
 		
 	    //Заголовок
-	    let title = "Title тура ";			
+	    let title = "Зоопарк Харьков и Фентези парк ";			
 	    // Описание 
 	    let descriptionHead = "Туры выходного дня - Новый поворот, ОПИСАНИЕ  ";		
 	    //Ключевые слова
 	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Ключевые слова ";		
 	    //Cсылкa Tура 
-	    let linkPage = "https://novipovorot.pp.ua/page-example.html";		
+	    let linkPage = "https://novipovorot.pp.ua/page-Zoo-Kharkiv.html";		
 	    //Картинка
-	    let imgInTour = "https://picsum.photos/825/473";		
+	    let imgInTour = "./images/Zoo-Kharkiv/inside-Zoo-Kharkiv.jpg";		
 	    //Дата тура
-	    let dateTour = "2022";		
+	    let dateTour = "29 января и 19 февраля 2022";		
 	    //Подзаголовок
-	    let subtitle = "Подзаголовок";		
+	    let subtitle = "Зоопарк Харьков и Фентези парк!  Новый центральный зоопарк -сафари!Сад Шевченко и сияющий Фентези парк. Музей Кофе и Парк Горького!";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
 		{program: 'Описание1'}, 
