--- a/page-Zoo-Kharkiv.html
+++ b/page-Zoo-Kharkiv.html
@@ -19,19 +19,18 @@
 	    let subtitle = "Зоопарк Харьков и Фентези парк!  Новый центральный зоопарк -сафари!Сад Шевченко и сияющий Фентези парк. Музей Кофе и Парк Горького!";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
-		{program: 'Описание1'}, 
-	        {program: 'Описание2'}, 
-		{program: 'Описание3'}, 
-		{program: 'Описание4'}
+		{program: 'Самый крутой зоопарк-сафари страны! Настоящий водопад и живой слон, малыш жирафик, милашки пингвинчики, огромнейший бегемот, розовые пеликаны и фламинго... В этом зоопарке чувствуешь себя ребенком.'}, 
+	        {program: 'Потрясающий интерактивный музей кофе, для настоящих кофеманов или Парк Горького с удивительными скульптурами и головокружительными аттракционами на выбор! '}, 
+		{program: 'Звездные небеса Харькова покорят Вас..Фентези парк с нереальными скульптурами из света это стоит увидеть. Этот восторг пробирает до мурашек по коже! '}, 
+		{program: 'Всем покажу эти чудеса! Срочно запишись!'}
 	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: 'Цена билета до ...: взрослые ... грн., дети от 3 до 12 лет ... грн., дети от 13 до 17 лет ... грн.'}, 
-	        {informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}, 
-		{informPriceNote:  '*Примечание: До 5 лет без места в транспорте бесплатно.'}
+		{informPrice: 'Цена билета первые  8 мест: 800 грн., далее 870грн взрослые и 800 грн дети 6-12 л'}, 
+	       	{informPriceNote:  '*Примечание: До 5 лет без места в транспорте бесплатно, при сопровождении 2х взрослых.ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые для путешествия по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21'}
 	   ];	
 	   //Стоимость
-	   let price = "1000 Грн.";		
+	   let price = "800 Грн.";		
 	   //Продолжительность
 	   let duration	= "1 День";	
 	   //Описание тура
