--- a/page-Zoo-Kharkiv.html
+++ b/page-Zoo-Kharkiv.html
@@ -35,41 +35,44 @@
 	   let duration	= "1 День";	
 	   //Описание тура
 	   let descTours = [
-		{time: '09:01', description: 'Описание1'}, 
-		{time: '09:02', description: 'Описание2'}, 
-		{time: '09:03', description: 'Описание3'}, 
-		{time: '18:00', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
+		{time: '6:30', description: 'Выезд из Центра Запорожья после минутки позитива.  Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур. класса (раскладные сидения), TV  (ЛЕГКАЯ ДОРОГА). Заберем Вас :по проспекту от Автовокзала до Каховской. '}, 
+		{time: '12:00-12:40', description: 'экскурсионная прогулка Зеркальная струя главная достопримечательность Харькова, сад Шевченко с аллеей Славы, знаменитым памятником Шевченко.'}, 
+		{time: '12:40-15:40', description: 'посещение открытого после реконструкции супер крутого зоопарка в Харькове! Мы увидим поразительных животных: огромного слона в гигантском вольере с водопадом и бассейном, милашку жирафенка, розовых пеликанов и фламинго, малышей пингвинчиков которые так любят плавать, огромного бегемота, белых волков, смешных лисичек феников и многих других супер классных и милых животных! Это лучший зоопарк страны! '}, 
+		{time: '15:50-17:40', description: 'выбирай сам где тебе интересно. Музей кофе с его пьянящим ароматом (100грн с экскурсией) или супер крутой парк Горького с потрясными аттракционами(один из лучших парков, Украинский Диснейленд ).'}, 
+		{time: '17:40-18:40', description: 'Фентези Парк с потрясающе нереальными светящимися фигурами. Аллеями со звездными небесами. Космической музыкой, поразительными скульптурами сказочных существ! Это мир грез и сказок! '}, 
+		{time: '23:30', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
 	   ];		
 	  //В стоимость входит
 	  let includedInThePrice = [
-		{includePrice: 'Описание1'}, 
-	        {includePrice: 'Описание2'}, 
-		{includePrice: 'Описание3'}, 
-		{includePrice: 'Описание4'}
+		{includePrice: 'проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; (от количества людей в группе, места в транспорте по датам оплат) транспорт "Легкая дорога!" тур.класса с раскладными сиденьями, ТВ;'}, 
+	        {includePrice: 'супер позитивное экскурсионное сопровождение по маршруту от представителя Нового поворота;'}, 
+		{includePrice: 'магнит от Нового поворота'}
 	   ];	
 	  //В стоимость не входит
 	  let priceDoesNotInclude = [
-		{doesNotIncludePrice: 'Описание1'}, 
-	        {doesNotIncludePrice: 'Описание2'}, 
-		{doesNotIncludePrice: 'Описание3'}, 
-		{doesNotIncludePrice: 'Описание4'}
+		{doesNotIncludePrice: 'питание по всему маршруту (покажем где покушать, но оплатить прийдеться Вам );'}, 
+	        {doesNotIncludePrice: 'экскурсия по музею кофе 100грн;'}, 
+		{doesNotIncludePrice: 'аттракционы в парке Горького от 50 грн ;  '}
 	   ];	
 	  //Тексты подсказок
 	  let helpTexts = [
 		{badge: 'Запорожье'}, 
 	        {badge: 'Новый Поворот Запорожье'}, 
 		{badge: 'Путешествия'}, 
+		  {badge: 'Зоопарк Харьков'},
+		  {badge: 'Фентези парк Харьков'},
+		  {badge: 'Парк Горького Харьков'},
 		{badge: 'Туризм'}
 	   ];
 		
 	</script> 
 
 	<!-- Open Graph -->
-        <meta property="og:title" content="28 Лошадок и Симба">
-        <meta property="og:description" content="Туры выходного дня - Новый поворот, 28 лошадок и зоопарк Симба. Лучший выходной!" />
+        <meta property="og:title" content="Зоопарк Харьков и Фентези парк">
+        <meta property="og:description" content="Туры выходного дня - Новый поворот, Зоопарк Харьков и Фентези парк!  Новый центральный зоопарк -сафари!Сад Шевченко и сияющий Фентези парк. Музей Кофе и Парк Горького!" />
         <meta property="og:type" content="website" />
-	<meta property="og:image" content="./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg">
-        <meta property="og:url" content="https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html" />
+	<meta property="og:image" content="./images/Zoo-Kharkiv/inside-Zoo-Kharkiv.jpg">
+        <meta property="og:url" content="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
