--- a/page-Zoo-Kharkiv.html
+++ b/page-Zoo-Kharkiv.html
@@ -27,8 +27,7 @@
 	  //Информируем
           let inform = [
 		{informPrice: 'Цена билета первые  8 мест: 800 грн., далее 870грн взрослые и 800 грн дети 6-12 л'}, 
-	       	{informPriceNote:  '*Примечание: До 5 лет без места в транспорте бесплатно, при сопровождении 2х взрослых.ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые для путешествия по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21'}
-	   ];	
+	       	{informPriceNote: '*Примечание: До 5 лет без места в транспорте бесплатно, при сопровождении 2х взрослых.ВНИМАНИЕ! Всем туристам от 18 лет необходимо иметь при себе документы необходимые для путешествия по Украине согласно постановления 1066 Каб.Мин.Укр. от 11.10.21'} ];	
 	   //Стоимость
 	   let price = "800 Грн.";		
 	   //Продолжительность
