--- a/index.html
+++ b/index.html
@@ -314,33 +314,32 @@
             </p>
             <div class="row">
 
-                <!-- Харьков Рождество  -->
+                <!-- Зоопарк Харьков и Фентези парк  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Christmas.html">
-                            <img src="images/Kharkiv-Christmas/home-Kharkiv-Christmas.jpg" alt="baloon-fast"
+                        <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
+                            <img src="images/Zoo-Kharkiv/home-Zoo-Kharkiv.jpg" alt="Zoo-Kharkiv"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>870грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>800грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span> Харьков </h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Kharkiv-Christmas.html">
-                               Харьков Рождество
+                            <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
+                               Зоопарк Харьков и Фентези парк
                             </a>
                         </h5>
                         <p class="">
-                         Харьков лучшее Рождество! Новый центральный зоопарк -сафари! Парк Шевченко, 
-                         Фентези парк. Самая высокая елка страны!
+                         Самый крутой зоопарк-сафари страны! Настоящий водопад и живой слон, малыш жирафик, милашки пингвинчики, огромнейший бегемот, розовые пеликаны и фламинго...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  8 Января </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  29 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Харьков Рождество  -->
+                <!--  //Зоопарк Харьков и Фентези парк  -->
                                
                                              
                 <!--  Новогодние огни Днепра -->
@@ -459,13 +458,13 @@
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-                <!-- Харьков Рождество  -->
+                <!-- Зоопарк Харьков  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3"> Харьков </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Christmas.html">
-                            <img src="/images/Kharkiv-Christmas/pop-Kharkiv-Christmas.jpg" class="img-fluid"
-                                alt=" Харьков Рождество">
+                        <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
+                            <img src="images/Zoo-Kharkiv/pop-Zoo-Kharkiv.jpg" class="img-fluid"
+                                alt=" Зоопарк Харьков">
                         </a>
                         <div class="rating">
                             <ul>
@@ -479,12 +478,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Харьков </h4>
+                            <h4> Зоопарк Харьков </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Харьков Рождество  -->
+                <!-- //Зоопарк Харьков  -->
 
                 <!-- Карпаты - 2022 -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
