--- a/page-example.html
+++ b/page-example.html
@@ -28,7 +28,7 @@
           let inform = [
 		{informPrice: 'Цена билета до ...: взрослые ... грн., дети от 3 до 12 лет ... грн., дети от 13 до 17 лет ... грн.'}, 
 	        {informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}, 
-		{informPriceNote:  '*Примечание: До 5 лет без места в транспорте бесплатно.'}
+		{informPrice:  '*Примечание: До 5 лет без места в транспорте бесплатно.'}
 	   ];	
 	   //Стоимость
 	   let price = "1000 Грн.";		
