--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -608,13 +608,13 @@
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-               <!-- Харьков Рождество  -->
+               <!-- Зоопарк Харьков  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3"> Харьков </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Christmas.html">
-                            <img src="/images/Kharkiv-Christmas/pop-Kharkiv-Christmas.jpg" class="img-fluid"
-                                alt=" Харьков Рождество">
+                        <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
+                            <img src="images/Zoo-Kharkiv/pop-Zoo-Kharkiv.jpg" class="img-fluid"
+                                alt=" Зоопарк Харьков">
                         </a>
                         <div class="rating">
                             <ul>
@@ -628,12 +628,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Харьков </h4>
+                            <h4> Зоопарк Харьков </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Харьков Рождество  -->
+                <!-- //Зоопарк Харьков  -->
 
                 <!-- Карпаты - 2022 -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
