--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                          Самый крутой зоопарк-сафари страны! Настоящий водопад и живой слон, малыш жирафик, милашки пингвинчики, огромнейший бегемот, розовые пеликаны и фламинго...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  29 Января </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  29 Января и 19 февраля</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
