--- a/index.html
+++ b/index.html
@@ -836,6 +836,17 @@
     <!-- Schema.org -->
     <script type="application/ld+json">
         {
+  "@context": "https://schema.org/",
+  "@type": "WebSite",
+  "name": "Туры выходного дня Новый Поворот",
+  "url": "https://novipovorot.pp.ua",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "{search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+        {
           "@context": "https://schema.org/",
           "@type": "WebSite",
           "name": "Туры выходного дня - Новый Поворот",
