--- a/index.html
+++ b/index.html
@@ -845,15 +845,16 @@
     "target": "{search_term_string}",
     "query-input": "required name=search_term_string"
   }
+  "@type": "Product", 
+  "name": "Туры, экскурсии, дегустации, походы",
+  "image": "https://novipovorot.pp.ua/images/novi-povorot.jpg",
+  "description": "Сделаем Вашу жизнь ярче и разнообразнее. Туры выходного дня из Запорожья, экскурсии в Запорожье и Карпатах, походы в Турции, мастер-классы и дегустации... Самые неожиданные места Украины и Европы. Путешествуйте с улыбкой. С любовью Новый поворот!",
+  "brand": {
+    "@type": "Brand",
+    "name": "Новый Поворот"
+  }
 }
-        {
-          "@context": "https://schema.org/",
-          "@type": "WebSite",
-          "name": "Туры выходного дня - Новый Поворот",
-          "url": "https://novipovorot.pp.ua",
-          "description": "Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации",
-          "image": "https://novipovorot.pp.ua/images/novi-povorot.jpg"
-        }
+        
     </script>
     <!-- /Schema.org -->
 
