--- a/index.html
+++ b/index.html
@@ -839,14 +839,20 @@
           "@context": "https://schema.org/",
            "@type": "WebSite",
            "name": "Туры выходного дня Новый Поворот",
+           "logo": "https://novipovorot.pp.ua/images/novi-povorot.jpg",
            "url": "https://novipovorot.pp.ua",
-           "potentialAction": {
-             "@type": "SearchAction",
-             "target": "{search_term_string}",
-             "query-input": "required name=search_term_string"
-           }
-  
-  
+           "contactPoint": {
+                  "@type": "ContactPoint",
+                  "telephone": "+380506702264",
+                  "areaServed": "UA",
+                  "availableLanguage": "Russian"
+             },
+             "sameAs": [
+                    "https://m.facebook.com/novipovorot.pp.ua",
+                    "https://twitter.com/novipovorot",
+                    "https://www.instagram.com/dovgalyv.zp/",
+                    "https://novipovorot.pp.ua"
+             ]            
         }       
     </script>
     <!-- /Schema.org -->
